@@ -11,6 +11,7 @@ import lombok.extern.log4j.Log4j2;
 import org.apache.commons.io.FilenameUtils;
 import org.folio.dew.client.HoldingClient;
 import org.folio.dew.domain.dto.HoldingsFormat;
+import org.folio.dew.domain.dto.HoldingsRecord;
 import org.folio.dew.domain.dto.HoldingsRecordCollection;
 import org.folio.dew.domain.dto.IdentifierType;
 import org.folio.dew.domain.dto.ItemIdentifier;
@@ -25,7 +26,6 @@ import org.springframework.stereotype.Component;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 @StepScope
@@ -44,6 +44,7 @@ public class BulkEditHoldingsProcessor implements ItemProcessor<ItemIdentifier, 
   private String fileName;
 
   private Set<ItemIdentifier> identifiersToCheckDuplication = new HashSet<>();
+  private Set<String> fetchedHoldingsIds = new HashSet<>();
 
   @Override
   public List<HoldingsFormat> process(ItemIdentifier itemIdentifier) throws BulkEditException {
@@ -58,27 +59,30 @@ public class BulkEditHoldingsProcessor implements ItemProcessor<ItemIdentifier, 
       throw new BulkEditException(NO_MATCH_FOUND_MESSAGE);
     }
 
+    var distinctHoldings = holdings.getHoldingsRecords().stream()
+      .filter(holdingsRecord -> !fetchedHoldingsIds.contains(holdingsRecord.getId()))
+      .toList();
+    fetchedHoldingsIds.addAll(distinctHoldings.stream().map(HoldingsRecord::getId).toList());
+
     var instanceHrid = INSTANCE_HRID == IdentifierType.fromValue(identifierType) ? itemIdentifier.getItemId() : null;
     var itemBarcode = ITEM_BARCODE == IdentifierType.fromValue(identifierType) ? itemIdentifier.getItemId() : null;
 
-    return holdings.getHoldingsRecords().stream()
+    return distinctHoldings.stream()
       .map(r -> holdingsMapper.mapToHoldingsFormat(r, itemIdentifier.getItemId(), jobId, FilenameUtils.getName(fileName)).withOriginal(r))
       .map(holdingsFormat -> holdingsFormat.withInstanceHrid(instanceHrid))
       .map(holdingsFormat -> holdingsFormat.withItemBarcode(itemBarcode))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private HoldingsRecordCollection getHoldingsRecords(ItemIdentifier itemIdentifier) {
-    switch (IdentifierType.fromValue(identifierType)) {
-      case ID:
-      case HRID:
-        return holdingClient.getHoldingsByQuery(String.format(getMatchPattern(identifierType), resolveIdentifier(identifierType), itemIdentifier.getItemId()));
-      case INSTANCE_HRID:
-        return holdingClient.getHoldingsByQuery("instanceId==" + holdingsReferenceService.getInstanceIdByHrid(itemIdentifier.getItemId()));
-      case ITEM_BARCODE:
-        return holdingClient.getHoldingsByQuery("id==" + holdingsReferenceService.getHoldingsIdByItemBarcode(itemIdentifier.getItemId()), 1);
-      default:
-        throw new BulkEditException(String.format("Identifier type \"%s\" is not supported", identifierType));
-    }
+    return switch (IdentifierType.fromValue(identifierType)) {
+      case ID, HRID -> holdingClient.getHoldingsByQuery(
+        String.format(getMatchPattern(identifierType), resolveIdentifier(identifierType), itemIdentifier.getItemId()));
+      case INSTANCE_HRID ->
+        holdingClient.getHoldingsByQuery("instanceId==" + holdingsReferenceService.getInstanceIdByHrid(itemIdentifier.getItemId()), Integer.MAX_VALUE);
+      case ITEM_BARCODE ->
+        holdingClient.getHoldingsByQuery("id==" + holdingsReferenceService.getHoldingsIdByItemBarcode(itemIdentifier.getItemId()), 1);
+      default -> throw new BulkEditException(String.format("Identifier type \"%s\" is not supported", identifierType));
+    };
   }
 }
